build: update project name and description in pyproject.toml and uv.lock to reflect the new title "PKU Treehole Starred Saver"

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [project]
-name = "pkutreeholecrawler"
+name = "pkutreeholestarredsaver"
 version = "0.1.0"
-description = "PKU Treehole Crawler"
+description = "PKU Treehole Starred Saver"
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
