--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,8 @@ description = "PKU Treehole Starred Saver"
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
+    "matplotlib>=3.10.3",
+    "ratelimiter>=1.2.0.post0",
     "requests>=2.32.4",
     "tqdm>=4.67.1",
 ]
