--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,75 @@
-# MacOS
-.DS_Store
-
 # Python
 __pycache__/
+*.py[cod]
+*$py.class
+*.so
+.Python
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+*.egg-info/
+.installed.cfg
+*.egg
+MANIFEST
 
-# Private config
+# Environment variables
+.env
+.venv
+env/
+venv/
+ENV/
+env.bak/
+venv.bak/
+
+# IDE
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
+
+# Project specific
 config_private.py
+cookies.json
+TaskData/
+*.zip
 
-# Data
-Data/
-Analysis/
+# Logs
+*.log
+logs/
+
+# OS generated files
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
+
+# Temporary files
+*.tmp
+*.temp
+
+# Data files (keep structure but ignore content)
+Data/PostJson/*.json
+Data/PostMarkdown/*/
+Data/Image/*.jpg
+Data/Image/*.png
+Data/Image/*.gif
+Analysis/*.png
+
+# Jupyter Notebook
+.ipynb_checkpoints
+
+# Static files
+Data
