--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,8 +5,17 @@ description = "PKU Treehole Starred Saver"
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
+    "fastapi>=0.116.1",
     "matplotlib>=3.10.3",
     "ratelimiter>=1.2.0.post0",
     "requests>=2.32.4",
     "tqdm>=4.67.1",
+    "uvicorn[standard]>=0.35.0",
+]
+
+[dependency-groups]
+dev = [
+    "pytest>=8.0.0",
+    "black>=24.0.0",
+    "isort>=5.0.0",
 ]
